[package]
name = "hidemyweeb"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
dirs = "6.0.0"
image = "0.25.6"
pipewire = "0.8.0"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.23"
tray-item = { version = "0.10.0", features = ["ksni"] }
zbus = "5.5.0"
